# AZ_ML_Workspace

./: .dockerignore  .env.example  .env.test  .gitattributes  .gitignore  ALLURE_QUICK_START.md  ALLURE_REPORTS_GUIDE.md  ALLURE_SETUP_COMPLETE.md  ANSWER-VSCODE-CROSS-PLATFORM.md  ARCHITECTURE-Container.md  AzureML-BDD-Framework.code-workspace  AzureML-BDD-Framework.sln  AzureMLTestFramework.code-workspace  AzureMLTestFramework.sln  CHEATSHEET-Container.md  CONTAINER-SETUP-SUMMARY.md  ConfigTest.cs  DEBUGGING_SOLUTION.md  Dockerfile  FINAL_SOLUTION.md  FRAMEWORK_OVERVIEW.md  GETTING-STARTED.md  LINUX_QUICK_START.md  LINUX_SELF_HOSTED_AGENT_REQUIREMENTS.md  MIGRATION_SUMMARY.md  PLATFORM-COMPARISON.md  PROJECT_SUMMARY.md  PowerPoint_Content.txt  QUICKSTART-Container.md  QUICK_REFERENCE.md  QUICK_START.md  README-Container-Testing.md  README.md  README_COMPREHENSIVE.md  README_VSCODE_TESTING.md  SETUP_SUMMARY.md  SOLUTION-SUMMARY.md  ScenarioDemo.cs  ScenarioRunner.csproj  TEST_EXECUTION_SUMMARY.md  (+36 more)
.github/workflows/: test-automation.yml  test.yml
AzureMLWorkspace.Tests/: AzureMLWorkspace.Tests.csproj  Program.cs  README.md  README_MFA_SETUP.md  appsettings.json  appsettings.test.json  reqnroll.json
AzureMLWorkspace.Tests/Configuration/: TestConfiguration.cs
AzureMLWorkspace.Tests/Features/: AzureAISearch.feature.cs  AzureMLWorkspace.feature  AzureMLWorkspace.feature.cs
AzureMLWorkspace.Tests/Framework/: TestBase.cs
AzureMLWorkspace.Tests/Helpers/: BaseTest.cs  TestLogger.cs
AzureMLWorkspace.Tests/Hooks/: TestHooks.cs
AzureMLWorkspace.Tests/Scripts/: Setup-PIMPermissions.ps1  Test-AzureCliIntegration.ps1
AzureMLWorkspace.Tests/StepDefinitions/: AzureAISearchSteps.cs  AzureMLWorkspaceSteps.cs
AzureMLWorkspace.Tests/TestData/: azure-ml-config.json
AzureMLWorkspace.Tests/Tests/: AzureMLWorkspaceUITests.cs  ManualScenarioExecution.cs  VSCodeDesktopIntegrationTest.cs
AzureMLWorkspace.Tests/VSCodeDesktop/: README.md  package-lock.json  test-automation.js
NewFramework/: AzureML-BDD-Framework.sln  README.md  cucumber.js  global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  reqnroll.json  run-azure-ml-tests.sh  run-google-test.sh  run-tests.bat  run-tests.sh  test-setup.js  tsconfig.json  validate-setup.sh
NewFramework/CSharpTests/: .env.example  .gitignore  .runsettings  AZURE_AI_SERVICES_COMPLETION_STATUS.md  AZURE_AI_SERVICES_TEST_SUMMARY.md  AZURE_SETUP.md  BDD_GUIDE.md  CHANGELOG.md  CONFIGURATION_GUIDE.md  CONFIGURATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PlaywrightFramework.csproj  QUICKSTART_AZURE_AI_TESTS.md  QUICK_REFERENCE.md  README.md  README_AZURE_AI_SERVICES_TESTS.md  README_AZURE_SPEECH_SERVICES.md  README_AzureML_Automation_Tests.md  SPEECH_SERVICES_IMPLEMENTATION_SUMMARY.md  allureConfig.json  generate-allure-report.ps1  generate-allure-report.sh  reqnroll.json  run-automation-tests.ps1  run-automation-tests.sh  setup-speech-tests.ps1  setup-speech-tests.sh
NewFramework/Config/: appsettings.json
NewFramework/Documentation/: AzureML-Automation-Guide.md  PIM-Setup-Guide.md  VSCode-Notebook-Automation-Guide.md
NewFramework/ElectronTests/: .env.example  AZURE_AI_SERVICES_ARCHITECTURE.md  AZURE_AI_SERVICES_CHECKLIST.md  JUPYTER_TESTING.md  (+36 more)
NewNotebook/: README.md  requirements.txt
automation/: AUTOMATION_SUMMARY.md  README.md  azure-ml-automation.ps1  azure-ml-automation.sh  azure-ml-compute-automation.py  demo.py  requirements.txt  setup.sh  test-automation.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE_DOCUMENTATION.md  INTEGRATION_QUICK_REFERENCE.md  PYTHON_NET_INTEGRATION.md  QUICK_REFERENCE.md  ROLE_BASED_TESTING.md  TECHNICAL_DOCUMENTATION.md  TYPESCRIPT_INTEGRATION.md  USER_GUIDE.md  VSCODE_DESKTOP_TESTING_GUIDE.md
examples/: README.md  basic_usage.py  example-usage.js
old-framework-backup-20250925-183756/: AzureMLWorkspace.sln  Execute-Scenario.ps1  Sample_Test_Report.html  ScenarioRunner.cs
scripts/: run-role-tests.js  run-vscode-test.js  setup.js  validate-test-data.js  verify_auth.py
test-data/: azure-ml-config.json  requirements.txt  sample-dataset.csv  sample-notebook.ipynb  sample-python-script.py  vscode-settings.json
tests/: README.md  __init__.py
(+303 files in other folders)
